pseudocode/core/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> func_l_op l_op
Rule 2     program -> l_op
Rule 3     l_op -> op
Rule 4     l_op -> op l_op
Rule 5     func_l_op -> func
Rule 6     func_l_op -> func func_l_op
Rule 7     ar_op -> add
Rule 8     ar_op -> mul
Rule 9     ar_op -> sub
Rule 10    ar_op -> div
Rule 11    ar_op -> rdiv
Rule 12    ar_op -> mod
Rule 13    add -> ID PLUS ID
Rule 14    add -> CONST PLUS ID
Rule 15    add -> ID PLUS CONST
Rule 16    add -> CONST PLUS CONST
Rule 17    sub -> ID MINUS ID
Rule 18    sub -> CONST MINUS ID
Rule 19    sub -> ID MINUS CONST
Rule 20    sub -> CONST MINUS CONST
Rule 21    mul -> ID TIMES ID
Rule 22    mul -> CONST TIMES ID
Rule 23    mul -> ID TIMES CONST
Rule 24    mul -> CONST TIMES CONST
Rule 25    div -> ID DIV ID
Rule 26    div -> CONST DIV ID
Rule 27    div -> ID DIV CONST
Rule 28    div -> CONST DIV CONST
Rule 29    rdiv -> ID DIVIDE ID
Rule 30    rdiv -> CONST DIVIDE ID
Rule 31    rdiv -> ID DIVIDE CONST
Rule 32    rdiv -> CONST DIVIDE CONST
Rule 33    mod -> ID MOD ID
Rule 34    mod -> CONST MOD ID
Rule 35    mod -> ID MOD CONST
Rule 36    mod -> CONST MOD CONST
Rule 37    attr -> ID ASSIGN ID
Rule 38    attr -> ID ASSIGN CONST
Rule 39    attr -> ID ASSIGN ar_op
Rule 40    attr -> ID ASSIGN TRUE
Rule 41    attr -> ID ASSIGN FALSE
Rule 42    attr -> ID ASSIGN func_call
Rule 43    ret_op -> RETURN ID
Rule 44    ret_op -> RETURN CONST
Rule 45    ret_op -> RETURN ar_op
Rule 46    ret_op -> RETURN func_call
Rule 47    op -> ar_op
Rule 48    op -> attr
Rule 49    op -> write
Rule 50    op -> read
Rule 51    op -> func_call
Rule 52    op -> repeat
Rule 53    op -> ret_op
Rule 54    op -> if
Rule 55    op -> while
Rule 56    op -> for
Rule 57    cond -> TRUE
Rule 58    cond -> FALSE
Rule 59    cond -> cond_op
Rule 60    cond_op -> ID LOWER ID
Rule 61    cond_op -> ID LOWER CONST
Rule 62    cond_op -> CONST LOWER ID
Rule 63    cond_op -> CONST LOWER CONST
Rule 64    cond_op -> ID GREATER ID
Rule 65    cond_op -> ID GREATER CONST
Rule 66    cond_op -> CONST GREATER ID
Rule 67    cond_op -> CONST GREATER CONST
Rule 68    cond_op -> ID LEQUAL ID
Rule 69    cond_op -> ID LEQUAL CONST
Rule 70    cond_op -> CONST LEQUAL ID
Rule 71    cond_op -> CONST LEQUAL CONST
Rule 72    cond_op -> ID GEQUAL ID
Rule 73    cond_op -> ID GEQUAL CONST
Rule 74    cond_op -> CONST GEQUAL ID
Rule 75    cond_op -> CONST GEQUAL CONST
Rule 76    cond_op -> ID EQUAL ID
Rule 77    cond_op -> ID EQUAL CONST
Rule 78    cond_op -> CONST EQUAL ID
Rule 79    cond_op -> CONST EQUAL CONST
Rule 80    cond_op -> ID NEQUAL ID
Rule 81    cond_op -> ID NEQUAL CONST
Rule 82    cond_op -> CONST NEQUAL ID
Rule 83    cond_op -> CONST NEQUAL CONST
Rule 84    cond_op -> ar_op LOWER ar_op
Rule 85    cond_op -> ar_op GREATER ar_op
Rule 86    cond_op -> ar_op LEQUAL ar_op
Rule 87    cond_op -> ar_op GEQUAL ar_op
Rule 88    cond_op -> ar_op EQUAL ar_op
Rule 89    cond_op -> ar_op NEQUAL ar_op
Rule 90    cond_op -> ar_op LOWER ID
Rule 91    cond_op -> ar_op GREATER ID
Rule 92    cond_op -> ar_op LEQUAL ID
Rule 93    cond_op -> ar_op GEQUAL ID
Rule 94    cond_op -> ar_op EQUAL ID
Rule 95    cond_op -> ar_op NEQUAL ID
Rule 96    cond_op -> ID LOWER ar_op
Rule 97    cond_op -> ID GREATER ar_op
Rule 98    cond_op -> ID LEQUAL ar_op
Rule 99    cond_op -> ID GEQUAL ar_op
Rule 100   cond_op -> ID EQUAL ar_op
Rule 101   cond_op -> ID NEQUAL ar_op
Rule 102   cond_op -> ar_op LOWER CONST
Rule 103   cond_op -> ar_op GREATER CONST
Rule 104   cond_op -> ar_op LEQUAL CONST
Rule 105   cond_op -> ar_op GEQUAL CONST
Rule 106   cond_op -> ar_op EQUAL CONST
Rule 107   cond_op -> ar_op NEQUAL CONST
Rule 108   cond_op -> CONST LOWER ar_op
Rule 109   cond_op -> CONST GREATER ar_op
Rule 110   cond_op -> CONST LEQUAL ar_op
Rule 111   cond_op -> CONST GEQUAL ar_op
Rule 112   cond_op -> CONST EQUAL ar_op
Rule 113   cond_op -> CONST NEQUAL ar_op
Rule 114   if -> IF cond ATUNCI l_op ENDIF
Rule 115   if -> IF cond ATUNCI l_op ELSE l_op ENDIF
Rule 116   while -> WHILE cond EXECUTA l_op ENDWHILE
Rule 117   for -> FOR ID ASSIGN ID COMMA ID EXECUTA l_op ENDFOR
Rule 118   for -> FOR ID ASSIGN CONST COMMA ID EXECUTA l_op ENDFOR
Rule 119   for -> FOR ID ASSIGN ID COMMA CONST EXECUTA l_op ENDFOR
Rule 120   for -> FOR ID ASSIGN CONST COMMA CONST EXECUTA l_op ENDFOR
Rule 121   for -> FOR ID ASSIGN ID COMMA ID COMMA CONST EXECUTA l_op ENDFOR
Rule 122   for -> FOR ID ASSIGN CONST COMMA ID COMMA CONST EXECUTA l_op ENDFOR
Rule 123   for -> FOR ID ASSIGN ID COMMA CONST COMMA CONST EXECUTA l_op ENDFOR
Rule 124   for -> FOR ID ASSIGN CONST COMMA CONST COMMA CONST EXECUTA l_op ENDFOR
Rule 125   repeat -> REPEAT l_op UNTIL cond_op
Rule 126   read -> READ LPAREN l_param RPAREN
Rule 127   write -> PRINT LPAREN l_a_param RPAREN
Rule 128   func -> FUNCTION ID LPAREN l_param RPAREN l_op ENDFUNCTION
Rule 129   func -> FUNCTION ID LPAREN RPAREN l_op ENDFUNCTION
Rule 130   func_call -> ID LPAREN l_a_param RPAREN
Rule 131   func_call -> ID LPAREN RPAREN
Rule 132   l_param -> ID
Rule 133   l_param -> ID COMMA l_param
Rule 134   l_a_param -> CONST
Rule 135   l_a_param -> ID
Rule 136   l_a_param -> ar_op
Rule 137   l_a_param -> func_call
Rule 138   l_a_param -> l_a_param COMMA CONST
Rule 139   l_a_param -> l_a_param COMMA ID

Terminals, with rules where they appear

ASSIGN               : 37 38 39 40 41 42 117 118 119 120 121 122 123 124
ATUNCI               : 114 115
COMMA                : 117 118 119 120 121 121 122 122 123 123 124 124 133 138 139
CONST                : 14 15 16 16 18 19 20 20 22 23 24 24 26 27 28 28 30 31 32 32 34 35 36 36 38 44 61 62 63 63 65 66 67 67 69 70 71 71 73 74 75 75 77 78 79 79 81 82 83 83 102 103 104 105 106 107 108 109 110 111 112 113 118 119 120 120 121 122 122 123 123 124 124 124 134 138
DIV                  : 25 26 27 28
DIVIDE               : 29 30 31 32
ELSE                 : 115
ENDFOR               : 117 118 119 120 121 122 123 124
ENDFUNCTION          : 128 129
ENDIF                : 114 115
ENDWHILE             : 116
EQUAL                : 76 77 78 79 88 94 100 106 112
EXECUTA              : 116 117 118 119 120 121 122 123 124
FALSE                : 41 58
FOR                  : 117 118 119 120 121 122 123 124
FUNCTION             : 128 129
GEQUAL               : 72 73 74 75 87 93 99 105 111
GREATER              : 64 65 66 67 85 91 97 103 109
ID                   : 13 13 14 15 17 17 18 19 21 21 22 23 25 25 26 27 29 29 30 31 33 33 34 35 37 37 38 39 40 41 42 43 60 60 61 62 64 64 65 66 68 68 69 70 72 72 73 74 76 76 77 78 80 80 81 82 90 91 92 93 94 95 96 97 98 99 100 101 117 117 117 118 118 119 119 120 121 121 121 122 122 123 123 124 128 129 130 131 132 133 135 139
IF                   : 114 115
LEQUAL               : 68 69 70 71 86 92 98 104 110
LOWER                : 60 61 62 63 84 90 96 102 108
LPAREN               : 126 127 128 129 130 131
MINUS                : 17 18 19 20
MOD                  : 33 34 35 36
NEQUAL               : 80 81 82 83 89 95 101 107 113
PLUS                 : 13 14 15 16
PRINT                : 127
READ                 : 126
REPEAT               : 125
RETURN               : 43 44 45 46
RPAREN               : 126 127 128 129 130 131
TIMES                : 21 22 23 24
TRUE                 : 40 57
UNTIL                : 125
WHILE                : 116
error                : 

Nonterminals, with rules where they appear

add                  : 7
ar_op                : 39 45 47 84 84 85 85 86 86 87 87 88 88 89 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 136
attr                 : 48
cond                 : 114 115 116
cond_op              : 59 125
div                  : 10
for                  : 56
func                 : 5 6
func_call            : 42 46 51 137
func_l_op            : 1 6
if                   : 54
l_a_param            : 127 130 138 139
l_op                 : 1 2 4 114 115 115 116 117 118 119 120 121 122 123 124 125 128 129
l_param              : 126 128 133
mod                  : 12
mul                  : 8
op                   : 3 4
program              : 0
rdiv                 : 11
read                 : 50
repeat               : 52
ret_op               : 53
sub                  : 9
while                : 55
write                : 49

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . func_l_op l_op
    (2) program -> . l_op
    (5) func_l_op -> . func
    (6) func_l_op -> . func func_l_op
    (3) l_op -> . op
    (4) l_op -> . op l_op
    (128) func -> . FUNCTION ID LPAREN l_param RPAREN l_op ENDFUNCTION
    (129) func -> . FUNCTION ID LPAREN RPAREN l_op ENDFUNCTION
    (47) op -> . ar_op
    (48) op -> . attr
    (49) op -> . write
    (50) op -> . read
    (51) op -> . func_call
    (52) op -> . repeat
    (53) op -> . ret_op
    (54) op -> . if
    (55) op -> . while
    (56) op -> . for
    (7) ar_op -> . add
    (8) ar_op -> . mul
    (9) ar_op -> . sub
    (10) ar_op -> . div
    (11) ar_op -> . rdiv
    (12) ar_op -> . mod
    (37) attr -> . ID ASSIGN ID
    (38) attr -> . ID ASSIGN CONST
    (39) attr -> . ID ASSIGN ar_op
    (40) attr -> . ID ASSIGN TRUE
    (41) attr -> . ID ASSIGN FALSE
    (42) attr -> . ID ASSIGN func_call
    (127) write -> . PRINT LPAREN l_a_param RPAREN
    (126) read -> . READ LPAREN l_param RPAREN
    (130) func_call -> . ID LPAREN l_a_param RPAREN
    (131) func_call -> . ID LPAREN RPAREN
    (125) repeat -> . REPEAT l_op UNTIL cond_op
    (43) ret_op -> . RETURN ID
    (44) ret_op -> . RETURN CONST
    (45) ret_op -> . RETURN ar_op
    (46) ret_op -> . RETURN func_call
    (114) if -> . IF cond ATUNCI l_op ENDIF
    (115) if -> . IF cond ATUNCI l_op ELSE l_op ENDIF
    (116) while -> . WHILE cond EXECUTA l_op ENDWHILE
    (117) for -> . FOR ID ASSIGN ID COMMA ID EXECUTA l_op ENDFOR
    (118) for -> . FOR ID ASSIGN CONST COMMA ID EXECUTA l_op ENDFOR
    (119) for -> . FOR ID ASSIGN ID COMMA CONST EXECUTA l_op ENDFOR
    (120) for -> . FOR ID ASSIGN CONST COMMA CONST EXECUTA l_op ENDFOR
    (121) for -> . FOR ID ASSIGN ID COMMA ID COMMA CONST EXECUTA l_op ENDFOR
    (122) for -> . FOR ID ASSIGN CONST COMMA ID COMMA CONST EXECUTA l_op ENDFOR
    (123) for -> . FOR ID ASSIGN ID COMMA CONST COMMA CONST EXECUTA l_op ENDFOR
    (124) for -> . FOR ID ASSIGN CONST COMMA CONST COMMA CONST EXECUTA l_op ENDFOR
    (13) add -> . ID PLUS ID
    (14) add -> . CONST PLUS ID
    (15) add -> . ID PLUS CONST
    (16) add -> . CONST PLUS CONST
    (21) mul -> . ID TIMES ID
    (22) mul -> . CONST TIMES ID
    (23) mul -> . ID TIMES CONST
    (24) mul -> . CONST TIMES CONST
    (17) sub -> . ID MINUS ID
    (18) sub -> . CONST MINUS ID
    (19) sub -> . ID MINUS CONST
    (20) sub -> . CONST MINUS CONST
    (25) div -> . ID DIV ID
    (26) div -> . CONST DIV ID
    (27) div -> . ID DIV CONST
    (28) div -> . CONST DIV CONST
    (29) rdiv -> . ID DIVIDE ID
    (30) rdiv -> . CONST DIVIDE ID
    (31) rdiv -> . ID DIVIDE CONST
    (32) rdiv -> . CONST DIVIDE CONST
    (33) mod -> . ID MOD ID
    (34) mod -> . CONST MOD ID
    (35) mod -> . ID MOD CONST
    (36) mod -> . CONST MOD CONST

    FUNCTION        shift and go to state 6
    ID              shift and go to state 7
    PRINT           shift and go to state 25
    READ            shift and go to state 26
    REPEAT          shift and go to state 27
    RETURN          shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    CONST           shift and go to state 24

    program                        shift and go to state 1
    func_l_op                      shift and go to state 2
    l_op                           shift and go to state 3
    func                           shift and go to state 4
    op                             shift and go to state 5
    ar_op                          shift and go to state 8
    attr                           shift and go to state 9
    write                          shift and go to state 10
    read                           shift and go to state 11
    func_call                      shift and go to state 12
    repeat                         shift and go to state 13
    ret_op                         shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    for                            shift and go to state 17
    add                            shift and go to state 18
    mul                            shift and go to state 19
    sub                            shift and go to state 20
    div                            shift and go to state 21
    rdiv                           shift and go to state 22
    mod                            shift and go to state 23

state 1

    (0) S' -> program .



state 2

    (1) program -> func_l_op . l_op
    (3) l_op -> . op
    (4) l_op -> . op l_op
    (47) op -> . ar_op
    (48) op -> . attr
    (49) op -> . write
    (50) op -> . read
    (51) op -> . func_call
    (52) op -> . repeat
    (53) op -> . ret_op
    (54) op -> . if
    (55) op -> . while
    (56) op -> . for
    (7) ar_op -> . add
    (8) ar_op -> . mul
    (9) ar_op -> . sub
    (10) ar_op -> . div
    (11) ar_op -> . rdiv
    (12) ar_op -> . mod
    (37) attr -> . ID ASSIGN ID
    (38) attr -> . ID ASSIGN CONST
    (39) attr -> . ID ASSIGN ar_op
    (40) attr -> . ID ASSIGN TRUE
    (41) attr -> . ID ASSIGN FALSE
    (42) attr -> . ID ASSIGN func_call
    (127) write -> . PRINT LPAREN l_a_param RPAREN
    (126) read -> . READ LPAREN l_param RPAREN
    (130) func_call -> . ID LPAREN l_a_param RPAREN
    (131) func_call -> . ID LPAREN RPAREN
    (125) repeat -> . REPEAT l_op UNTIL cond_op
    (43) ret_op -> . RETURN ID
    (44) ret_op -> . RETURN CONST
    (45) ret_op -> . RETURN ar_op
    (46) ret_op -> . RETURN func_call
    (114) if -> . IF cond ATUNCI l_op ENDIF
    (115) if -> . IF cond ATUNCI l_op ELSE l_op ENDIF
    (116) while -> . WHILE cond EXECUTA l_op ENDWHILE
    (117) for -> . FOR ID ASSIGN ID COMMA ID EXECUTA l_op ENDFOR
    (118) for -> . FOR ID ASSIGN CONST COMMA ID EXECUTA l_op ENDFOR
    (119) for -> . FOR ID ASSIGN ID COMMA CONST EXECUTA l_op ENDFOR
    (120) for -> . FOR ID ASSIGN CONST COMMA CONST EXECUTA l_op ENDFOR
    (121) for -> . FOR ID ASSIGN ID COMMA ID COMMA CONST EXECUTA l_op ENDFOR
    (122) for -> . FOR ID ASSIGN CONST COMMA ID COMMA CONST EXECUTA l_op ENDFOR
    (123) for -> . FOR ID ASSIGN ID COMMA CONST COMMA CONST EXECUTA l_op ENDFOR
    (124) for -> . FOR ID ASSIGN CONST COMMA CONST COMMA CONST EXECUTA l_op ENDFOR
    (13) add -> . ID PLUS ID
    (14) add -> . CONST PLUS ID
    (15) add -> . ID PLUS CONST
    (16) add -> . CONST PLUS CONST
    (21) mul -> . ID TIMES ID
    (22) mul -> . CONST TIMES ID
    (23) mul -> . ID TIMES CONST
    (24) mul -> . CONST TIMES CONST
    (17) sub -> . ID MINUS ID
    (18) sub -> . CONST MINUS ID
    (19) sub -> . ID MINUS CONST
    (20) sub -> . CONST MINUS CONST
    (25) div -> . ID DIV ID
    (26) div -> . CONST DIV ID
    (27) div -> . ID DIV CONST
    (28) div -> . CONST DIV CONST
    (29) rdiv -> . ID DIVIDE ID
    (30) rdiv -> . CONST DIVIDE ID
    (31) rdiv -> . ID DIVIDE CONST
    (32) rdiv -> . CONST DIVIDE CONST
    (33) mod -> . ID MOD ID
    (34) mod -> . CONST MOD ID
    (35) mod -> . ID MOD CONST
    (36) mod -> . CONST MOD CONST

    ID              shift and go to state 7
    PRINT           shift and go to state 25
    READ            shift and go to state 26
    REPEAT          shift and go to state 27
    RETURN          shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    CONST           shift and go to state 24

    l_op                           shift and go to state 32
    op                             shift and go to state 5
    ar_op                          shift and go to state 8
    attr                           shift and go to state 9
    write                          shift and go to state 10
    read                           shift and go to state 11
    func_call                      shift and go to state 12
    repeat                         shift and go to state 13
    ret_op                         shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    for                            shift and go to state 17
    add                            shift and go to state 18
    mul                            shift and go to state 19
    sub                            shift and go to state 20
    div                            shift and go to state 21
    rdiv                           shift and go to state 22
    mod                            shift and go to state 23

state 3

    (2) program -> l_op .

    $end            reduce using rule 2 (program -> l_op .)


state 4

    (5) func_l_op -> func .
    (6) func_l_op -> func . func_l_op
    (5) func_l_op -> . func
    (6) func_l_op -> . func func_l_op
    (128) func -> . FUNCTION ID LPAREN l_param RPAREN l_op ENDFUNCTION
    (129) func -> . FUNCTION ID LPAREN RPAREN l_op ENDFUNCTION

    ID              reduce using rule 5 (func_l_op -> func .)
    PRINT           reduce using rule 5 (func_l_op -> func .)
    READ            reduce using rule 5 (func_l_op -> func .)
    REPEAT          reduce using rule 5 (func_l_op -> func .)
    RETURN          reduce using rule 5 (func_l_op -> func .)
    IF              reduce using rule 5 (func_l_op -> func .)
    WHILE           reduce using rule 5 (func_l_op -> func .)
    FOR             reduce using rule 5 (func_l_op -> func .)
    CONST           reduce using rule 5 (func_l_op -> func .)
    FUNCTION        shift and go to state 6

    func                           shift and go to state 4
    func_l_op                      shift and go to state 33

state 5
